infrastructure/terraform/security-groups.tf
resource "aws_security_group" "app_sg" {
  name        = "kata-cloud-sg-${random_id.bucket_suffix.hex}"
  description = "Security group for kata cloud application"

  # SSH
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.my_ip]
    description = "Allow SSH from my IP"
  }

  # App PROD port
  ingress {
    from_port   = 9090
    to_port     = 9090
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow access to the Spring Boot App (PROD)"
  }

  # Egress
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow all outbound traffic"
  }

  tags = {
    Name        = "kata-cloud-sg"
    Environment = "prod"
  }
}
